Adjust colors of notification icons based on session status.

This will prevent notification counter icon shown in white while
in the OOBE screen, when the background of the icons are also
bright color.

Test: manual test
Bug: 874021
Change-Id: I91cbbd1111b33d1a030b1d5aae2bdd884a1d487a
Reviewed-on: https://chromium-review.googlesource.com/1175517
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583179}
Former-commit-id: bea348ed76666585492aa85d4490e150d1e3aa20